fix more spacing issues

--- a/src/components/AboutContent/styles.module.scss
+++ b/src/components/AboutContent/styles.module.scss
@@ -24,7 +24,7 @@ $breakpoints: (
   grid-column: 2 / 3;
   @include proxima-semi-bold;
   font-size: 3.6rem;
-  line-height: 5.8rem;
+  line-height: 3.4rem;
   text-align: center;
 }
 
